@@ -1,3 +1,10 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Conversation.cs: addedo object path in Conversation
+	  constructors
+	* Banter/ConversationManager.cs: send in object path for conversation
+	  constructors
+
 2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/ChatWindow.cs: Added handlers for new channels on
